@@ -1,0 +1,10 @@
+# vim: set ft=bash sw=3 ts=3 expandtab:
+
+help_clean() {
+   echo "- run clean: Clean the source tree"
+}
+
+task_clean() {
+   run_command clean
+}
+
